[gd_scene load_steps=8 format=3 uid="uid://bwue20jxnwc08"]

[ext_resource type="Script" path="res://player.gd" id="1_ap1oi"]
[ext_resource type="Texture2D" uid="uid://rku5uroy3l25" path="res://Abetest.png" id="2_olj2d"]

[sub_resource type="Animation" id="Animation_y1p8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sh3hq"]
resource_name = "walk"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlxrv"]
_data = {
"RESET": SubResource("Animation_y1p8e"),
"walk": SubResource("Animation_sh3hq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb8hu"]
size = Vector2(16, 32)

[sub_resource type="GDScript" id="GDScript_iyrd4"]
script/source = "extends CollisionShape2D


# Called when the node enters the scene tree for the first time.

func _on_character_body_2d_pizza(moving):
	scale = Vector2(1, 0.5)
	position += Vector2(0, 8)
	moving = false
	print(\"Crouching\")
	return moving
"

[node name="PlayerModule" type="CharacterBody2D"]
script = ExtResource("1_ap1oi")

[node name="Player" type="Sprite2D" parent="."]
scale = Vector2(0.222222, 0.615385)
texture = ExtResource("2_olj2d")
centered = false
hframes = 4

[node name="PlayerAnim" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_xlxrv")
}

[node name="ClimbCheck2" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 8)
target_position = Vector2(0, -16)

[node name="ClimbCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 8)
target_position = Vector2(0, -32)

[node name="CrouchClimb" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 24)
target_position = Vector2(0, -16)

[node name="HeadCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 8)
target_position = Vector2(16, 0)

[node name="LegCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 24)
target_position = Vector2(16, 0)

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(8, 24)
target_position = Vector2(0, 8)

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2(8, 16)
shape = SubResource("RectangleShape2D_pb8hu")
script = SubResource("GDScript_iyrd4")

[connection signal="stance_crouch" from="." to="." method="_on_stance_crouch"]
[connection signal="stance_standing" from="." to="." method="_on_stance_standing"]
[connection signal="stance_turn" from="." to="." method="_on_stance_turn"]
